--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 port = 3000
-mongo =  mongodb+srv://ravikantsbiradar8123:56rmfisIuGe6tyii@e-com.wfspliy.mongodb.net/
+mongo =  mongodb+srv://ravikantsbiradar8123:<password>@e-com.wfspliy.mongodb.net/
 
 
 
